# klaus

./: .ghci  .gitignore  README.md  doctests.hs  klaus.cabal
execs/: template.hs  y21d01.hs  y21d02.hs  y21d03.hs
src/: Klaus.hs  template.hs  y21d01.hs  y21d02.hs  y21d03.hs  y21d04.hs  y21d12.hs  y21d13.hs  y21d14.hs  y21d23.hs
src/Klaus/: Accounting.hs  Bestiary.hs  Paperwork.hs  Submarine.hs  WordBook.hs
src/Klaus/Bestiary/: Amphipod.hs
src/Klaus/Elves/: Argo.hs  Justin.hs  Linus.hs  Matthew.hs  Nemo.hs  Parsifal.hs  Rocco.hs
src/Klaus/Submarine/: Bingo.hs  Data.hs  Polymerization.hs  Sonar.hs
src/Klaus/Submarine/ITICS/: Manual.hs
