cabal-version:       2.4
name:                klaus
version:             0.1.0.0
synopsis:            Haskell library for solving Advent of Code problems
description:         Actually a collection of jokes in the form of a cluster of 
                     haskell modules
homepage:            https://github.com/kappanneo/klaus
license:             ISC
license-file:        LICENSE
author:              Claudio Pannacci
maintainer:          claudio.pannacci@protonmail.com
copyright:           2021 Claudio Pannacci
category:            None
build-type:          Simple

source-repository head
   type: git
   location: https://github.com/kappanneo/klaus

library
   hs-source-dirs:      src
   default-language:    Haskell2010

   exposed-modules:
      Klaus
      Klaus.WordBook
      Klaus.Elves.Argo
      Klaus.Elves.Justin
      Klaus.Elves.Linus
      Klaus.Elves.Matthew
      Klaus.Elves.Nemo
      Klaus.Elves.Parsifal
      Klaus.Elves.Rocco
      Klaus.Submarine
      Klaus.Submarine.Data
      Klaus.Submarine.Sonar
      Klaus.Submarine.Bingo
      Klaus.Submarine.ITICS.Manual
      Klaus.Submarine.Polymerization

   build-depends:
      base              ^>= 4.14,
      split             ^>= 0.2.3.4,

test-suite doctests
   type:                exitcode-stdio-1.0
   main-is:             doctests.hs
   ghc-options:         -threaded
   default-language:    Haskell2010

  build-depends:
   base,
   extra,
   doctest   ^>= 0.17,
   directory ^>= 1.3,
   filepath  ^>= 1.4,

common execs
   hs-source-dirs:      src
   build-depends:       klaus, base, split
   default-language:    Haskell2010

   other-modules:
      Klaus
      Klaus.WordBook
      Klaus.Elves.Argo
      Klaus.Elves.Justin
      Klaus.Elves.Linus
      Klaus.Elves.Matthew
      Klaus.Elves.Nemo
      Klaus.Elves.Parsifal
      Klaus.Elves.Rocco
      Klaus.Submarine
      Klaus.Submarine.Data
      Klaus.Submarine.Sonar
      Klaus.Submarine.Bingo
      Klaus.Submarine.ITICS.Manual
      Klaus.Submarine.Polymerization

executable y21d01
   import:              execs
   main-is:             y21d01.hs

executable y21d02
   import:              execs
   main-is:             y21d02.hs

executable y21d03
   import:              execs
   main-is:             y21d03.hs

executable y21d04
   import:              execs
   main-is:             y21d04.hs

executable y21d12
   import:              execs
   main-is:             y21d12.hs

executable y21d13
   import:              execs
   main-is:             y21d13.hs

executable y21d14
   import:              execs
   main-is:             y21d14.hs

executable y21d23
   import:              execs
   main-is:             y21d23.hs
